--- a/src/pages/about/about.styles.css
+++ b/src/pages/about/about.styles.css
@@ -1,5 +1,6 @@
 .about {
   background-color: transparent;
+
   font-size: 1.1em;
 }
 
@@ -9,4 +10,11 @@
 
 .my-details {
   background-color: rgba(255, 255, 255, 0.747);
+}
+
+.profile{
+  position: relative;
+  width: 250px;
+  height: 250px;
+  border-radius: 100%;
 }
